@@ -1,3 +1,9 @@
+2002-07-09  Dmitriy Anisimkov  <anisimkov@yahoo.com>
+
+	* aws-server.ads, aws-server.adb:
+	(Set_Unexpected_Exception_Handler): New routine.
+	Support for user defined unexpected exception handlers.
+
 2002-07-07  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-server-protocol_handler.adb:
